--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@11ty/eleventy": "^3.0.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
-    "eleventy-plugin-embed-everything": "^1.19.0"
+    "eleventy-plugin-embed-everything": "^1.19.0",
+    "html-entities": "^2.5.2",
+    "string-strip-html": "^8.5.0"
   }
 }
