--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "push": "neocities push _site",
     "build": "npx @11ty/eleventy",
-    "dev": "npx @11ty/eleventy --serve"
+    "dev": "npx @11ty/eleventy --serve",
+    "index": "npx pagefind --site _site --glob \"**/*.html\""
   },
   "keywords": [],
   "author": "Jacen Sekai",
@@ -20,5 +21,8 @@
     "html-entities": "^2.5.2",
     "markdown-it-for-inline": "^2.0.1",
     "string-strip-html": "^8.5.0"
+  },
+  "devDependencies": {
+    "pagefind": "^1.4.0"
   }
 }
